# neosigma

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  client_debug.py  docker-compose.yml  openapi.json  pyproject.toml  test_client.py
app/: auth.py  config.py  db.py  main.py  optimizer.py  seed.py
app/api/: auth.py  jobs.py  orgs.py
app/authz/: __init__.py  decorators.py  policy.py
app/executor/: __init__.py  base.py  harbor.py  simulated.py
app/harness/: template.py  workspace.py
app/models/: __init__.py  agent_version.py  base.py  iteration.py  job.py  member.py  organization.py  refresh_token.py  task_result.py  user.py
app/schemas/: __init__.py  agent_version.py  auth.py  common.py  iteration.py  job.py  organization.py
app/services/: agent_versions.py  jobs.py
app/worker/: __init__.py  processor.py  worker.py
scripts/: debug_job.py  export_openapi.py
tests/: test_api.py  test_authz.py  test_cancellation.py  test_optimizer.py
