[project]
name = "agent-optimization-service"
version = "0.1.0"
description = "Backend service that runs an agent against TerminalBench tasks in sandboxes, mines failures, and iteratively improves the agent via an LLM."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "litellm>=1.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "email-validator>=2.1",
    "harbor[daytona]>=0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
